Refactor: Move history averages to fixed container

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                     <button id="clear-history-btn" class="clear-history-btn">Clear</button>
                 </div>
                 <div id="history-list" class="history-list"></div>
+                <div id="history-summary" class="history-summary"></div>
             </section>
         </main>
     </div>
